--- a/styles/style.css
+++ b/styles/style.css
@@ -193,11 +193,7 @@ ol {
     .img {
         width: auto;
     }
-    
-    }  
 
-    .principal__texto{
-      width:auto;  
+    .botoes {
+        padding-bottom: 15px;
     }
-
-}
